# mp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  resume.md
.streamlit/: config.toml
src/mp/: app.py  cache.py  features.py  library.py  render.py  viz.py
